<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Save me, phone</string>
    <string name="action_settings">Settings</string>
    <string name="service_name" translatable="false">IncomingCallListener</string>
    <string name="remote_service_started" translatable="false">remote_service_started</string>
    <string name="remote_service_stopped" translatable="false">remote_service_stopped</string>
    <string name="remote_service_label" translatable="false">Marina and the Diamonds</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="hint">Block number</string>
    <string name="blacklist">My blacklist</string>
    <string name="block_hidden_numbers">Block private numbers</string>
    <string name="notification_block_call_private_content_title">Private call blocked</string>
    <string name="notification_block_call_private_content_text">Private number</string>
    <string name="notification_block_call_content_title">Dangerous call blocked</string>
    <string name="contacts">Contacts</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="permission_read_contacts">This application needs permission to read your contacts.</string>
    <string name="permission_read_call_logs">This application needs permission to read your call logs.</string>
    <string name="permissions_denied">Sorry, you can not use this function without the proper permits.</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="add_contact_dialog">New Blacklist Phone</string>
    <string name="text_description">Enter a new number to block or select numbers from your Contacts and Logged calls.</string>
    <string name="block_selected">Block Selected</string>
    <string name="no_contacts_selected">You have not selected any contact.</string>
    <string name="block_blacklist_numbers">Block blacklist numbers</string>
    <string name="block_unknown_numbers">Block unknown numbers</string>
    <string name="notification_block_call_content_text">You\'ve been saved from</string>
    <string name="Tab" translatable="false">Tab</string>
    <string name="no_blocked_numbers">No blocked numbers.</string>
</resources>

