<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/text_description" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_newPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/hint"
            android:inputType="phone"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/primary" />

        <ImageButton
            android:id="@+id/btn_block_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:background="@drawable/icon_button_background"
            android:contentDescription="@string/text_description"
            android:padding="@dimen/fab_margin"
            android:src="@drawable/ic_contact_phone_black_24dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/btn_DeleteAll"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:text="@string/clear"
            android:textColor="@color/primary" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:text="@string/cancel"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btn_newPhone"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:text="@string/add"
            android:textColor="@color/primary" />


    </LinearLayout>


</LinearLayout>