<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            style="@style/first_linear_layout"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:text="@string/block_hidden_numbers"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:text="@string/block_blacklist_numbers"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:text="@string/block_unknown_numbers"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_hidden_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:switchPadding="23dp" />

                <Switch
                    android:id="@+id/switch_blacklist_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:switchPadding="23dp" />

                <Switch
                    android:id="@+id/switch_unknown_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_activity_horizontal_margin"
                    android:switchPadding="23dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout style="@style/second_linear_layout">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activities.MainActivity">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:elevation="0dp">

                    <include layout="@layout/toolbar" />

                </android.support.design.widget.AppBarLayout>

                <TextView
                    android:id="@+id/txt_blocked_contacts_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_blocked_numbers"
                    android:visibility="invisible" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_blocked_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/plus_vector"
                    app:layout_anchor="@id/recycler_blocked_contacts"
                    app:layout_anchorGravity="bottom|right|end"
                    app:layout_behavior="com.dreedi.chicharo.call_blocker.adapters.ScrollAwareFabBehavior" />

            </android.support.design.widget.CoordinatorLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
